# autonomous-job-search

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
config/: agents.json
orchestration/: config.json
prompts/: app_spec.txt.example  coding_prompt.md.example  initializer_prompt.md.example
src/: __init__.py  agent.py  client.py  main.py  progress.py  prompts.py  security.py
src/orchestration/: __init__.py  __main__.py  agent_runner.py  cli.py  config.py  coordinator.py  merger.py  state.py  types.py
tests/: __init__.py  test_security.py
ui/: Dockerfile  README.md  next.config.ts  package-lock.json  package.json
ui/prisma/: schema.prisma
ui/src/app/: globals.css  layout.tsx  page.tsx
ui/src/app/api/applications/: route.ts
ui/src/app/api/applications/[id]/: route.ts
ui/src/app/api/import/: route.ts
ui/src/app/api/interviews/: route.ts
ui/src/app/api/interviews/[id]/: route.ts
ui/src/app/api/jobs/: route.ts
ui/src/app/api/jobs/[id]/: route.ts
ui/src/app/api/stats/: route.ts
ui/src/components/: header.tsx  job-card.tsx  job-detail.tsx  job-filters.tsx  pagination.tsx  stats-cards.tsx
ui/src/components/job-detail/: application-tab.tsx  interview-form.tsx  interviews-tab.tsx  overview-tab.tsx
ui/src/constants/: index.ts
ui/src/hooks/: use-application.ts  use-hidden-jobs.ts  use-interviews.ts  use-jobs.ts
ui/src/lib/: animations.ts  jobs.ts
ui/src/types/: application.ts  job.ts
